tests/cli/snapshots/cli__baseline__baseline_rule_hardcoded_only.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
    - "--rule"
    - hardcoded
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:6:19
     |
   6 |             <span>Hardcoded text</span>
     |                   ^
  +             {/* glot-disable-next-line hardcoded */}

Inserted 1 comment(s) in 1 file(s):
  - hardcoded: 1 comment(s)

----- stderr -----
