tests/cli/snapshots/cli__baseline__baseline_rule_untranslated_only.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
    - "--rule"
    - untranslated
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:7:20
     |
   7 |             <span>{t("greeting")}</span>
     |                    ^
  +             {/* glot-disable-next-line untranslated */}

Inserted 1 comment(s) in 1 file(s):
  - untranslated: 1 comment(s), 1 key(s)

----- stderr -----
