tests/cli/snapshots/cli__baseline__baseline_skips_and_inserts_mixed.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Skipped (line has translation call):
  --> ./src/app.tsx:6:32
     |
   6 |             <span>{t("title")} (Hardcoded suffix)</span>
     |                                ^

  --> ./src/app.tsx:7:19
     |
   7 |             <span>Pure hardcoded text</span>
     |                   ^
  +             {/* glot-disable-next-line */}

Inserted 1 comment(s) in 1 file(s).
Skipped 1 line(s) with mixed translation/hardcoded text.

----- stderr -----
