tests/cli/snapshots/cli__baseline__baseline_untranslated_in_js_file_uses_slash_comment.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.js:4:19
     |
   4 |     const label = t("greeting");
     |                   ^
  +     // glot-disable-next-line untranslated

Inserted 1 comment(s) in 1 file(s):
  - untranslated: 1 comment(s), 1 key(s)

----- stderr -----
